--- a/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
+++ b/src/app/_hauptKomponente/c-dashboard/c-dashboard.component.html
@@ -2,15 +2,232 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="forWindow">
     <div class="forOL window">
+        <div class="windowTitle">
+            <p>Schnellzugriff</p>
+        </div>
+        <div class="windowContent">
+            <div class="schnellzugriff">
+                <a href="">
+                    Projekt erfassen
+                </a>
+                <a href="">
+                    Kunde erfassen
+                </a>
+                <a href="">
+                    Artikel erfassen
+                </a>
+            </div>
+        </div>
     </div>
-
     <div class="forOR window">
+        <div class="windowTitle">
+            <p>Thomas Brändle</p>
+        </div>
+        <div class="windowContent">
+            <div class="infos">
+                <p>
+                    Thomas Brändle
+                    <br /> Friedaustrasse 3
+                    <br />
+                    <br /> +41 71 79 520 65 11
+                    <br /> www.thomas-braendle.com
+                    <br /> design@thomas-braendle.com
+                    <br />
+                    <br /> Web Development, Fotografie & Videografie
+                </p>
+            </div>
+            <div class="logo">
+                <img [src]="logoUnternehmen" alt="">
+            </div>
+        </div>
     </div>
-
     <div class="forUL window">
+        <div class="windowTitle">
+            <p>Flüssige Mittel</p>
+        </div>
+        <div class="fmAktuell">
+            <div class="fmTitle">
+                <p>2022</p>
+            </div>
+            <div class="fmContent">
+                <div class="rowOne">
+                    <p>Ertrag</p>
+                    <p>Offene Rechnungen</p>
+                    <p>Aufwand</p>
+                </div>
+                <div class="rowTwo">
+                    <p>CHF 10'000.00.-</p>
+                    <p>CHF 1'000.00.-</p>
+                    <p>CHF 6'000.00.-</p>
+                </div>
+            </div>
+        </div>
+        <div class="fmOne">
+            <div class="fmTitle">
+                <p>2021</p>
+            </div>
+            <div class="fmContent">
+                <div class="rowOne">
+                    <p>Ertrag</p>
+                    <p>Offene Rechnungen</p>
+                    <p>Aufwand</p>
+                </div>
+                <div class="rowTwo">
+                    <p>CHF 10'000.00.-</p>
+                    <p>CHF 1'000.00.-</p>
+                    <p>CHF 6'000.00.-</p>
+                </div>
+            </div>
+        </div>
+        <div class="fmTwo">
+            <div class="fmTitle">
+                <p>2020</p>
+            </div>
+            <div class="fmContent">
+                <div class="rowOne">
+                    <p>Ertrag</p>
+                    <p>Offene Rechnungen</p>
+                    <p>Aufwand</p>
+                </div>
+                <div class="rowTwo">
+                    <p>CHF 10'000.00.-</p>
+                    <p>CHF 1'000.00.-</p>
+                    <p>CHF 6'000.00.-</p>
+                </div>
+            </div>
+        </div>
+        <div class="fmThree">
+            <div class="fmTitle">
+                <p>2019</p>
+            </div>
+            <div class="fmContent">
+                <div class="rowOne">
+                    <p>Ertrag</p>
+                    <p>Offene Rechnungen</p>
+                    <p>Aufwand</p>
+                </div>
+                <div class="rowTwo">
+                    <p>CHF 10'000.00.-</p>
+                    <p>CHF 1'000.00.-</p>
+                    <p>CHF 6'000.00.-</p>
+                </div>
+            </div>
+        </div>
     </div>
-
     <div class="forUR window">
+        <div class="windowTitle">
+            <p>Letzte Vorgänge</p>
+        </div>
+        <div class="letzteVorgaenge">
+            <table>
+                <tr>
+                    <th>Belegart</th>
+                    <th>Kunde</th>
+                    <th>Nummer</th>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+                <tr>
+                    <td>Auftrag</td>
+                    <td>Muster AG</td>
+                    <td>AB 20-001</td>
+                </tr>
+
+            </table>
+        </div>
     </div>
 </div>
 
