--- a/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
+++ b/src/app/_hauptKomponente/n-projekte/n-projekte.component.html
@@ -2,5 +2,340 @@
 <app-b-sidebar></app-b-sidebar>
 <div class="oneWindow">
     <div class="one window">
+        <div class="windowTitle windowHeader">
+            <p>Projekte</p>
+            <div class="searchBarSmall">
+                <input type="text" id="searchBarSmall" placeholder="SEARCH">
+                <a href="#"><img [src]="search" alt=""></a>
+            </div>
+            <div class="btnErfassen">
+                <button type="button" class="btnErfassen">Datei Erfassen</button>
+            </div>
+        </div>
+        <div class="windowTable">
+            <table>
+                <tr>
+                    <th>Nummer</th>
+                    <th>Projekt</th>
+                    <th>Kunde</th>
+                    <th>Erfasst</th>
+                    <th>Status</th>
+                    <th>Art</th>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+                <tr>
+                    <td>AB 20-001</td>
+                    <td>Thomas Brändle Website</td>
+                    <td>Thomas Brändle</td>
+                    <td>19.07.1994</td>
+                    <td>Offen</td>
+                    <td>Angebot</td>
+                </tr>
+
+            </table>
+        </div>
     </div>
 </div>
