--- a/src/styles.sass
+++ b/src/styles.sass
@@ -24,7 +24,8 @@
     font-weight: regular
 
 @import './sass/var'
-   
+
+/* Globale Einstellungen */
 *
     padding: 0
     margin: 0
@@ -46,3 +47,10 @@ h2, h3, h4, h5, p, a, label
     font-size: 15px
     color: black
     text-decoration: none
+
+/* Scrollbar */
+::-webkit-scrollbar 
+    display: none
+    
+.is-acitve
+    background-color: $primaryColor
